fix contrast Pret pour ...

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ a:hover {
 
 .texture-paper::before {
     background: url("img/texture-paper.webp");
+    opacity: 0.1;
     background-size: 280px 280px;
 }
 
@@ -792,7 +793,7 @@ h4 {
 
 .tc-white {
     /* color: #F3976C!important; */
-    color: #fafafa!important
+    color: #FFFFFF!important
 }
 
 .btn-atomic-tangerine {
